# block-drive-vault

./: .CURSORRULES  .env  .env.example  .gitignore  .mcp.json  .npmrc  BLOCKDRIVE_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY_FIX_AUTH_TOKENS.md  SECURITY_FIX_USER_SIGNUPS.md  index.html  package-lock.json  package.json  project_state.md  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/: .gitignore  cloudflare.local.md
.claude/agents/: cloudflare-expert.md  solana-blockchain-architect.md
.claude/commands/: release.md
.claude/hooks/: release-reminder.sh
agent/: .env.example  .gitignore  GETTING_STARTED.md  README.md  package.json  tsconfig.json
agent/src/: index.ts
cloudflare/: README.md  env.example  waf-rules.json  zero-trust-policies.json
cloudflare-toolkit/: .gitignore  README.md  package.json
cloudflare-toolkit/.claude-plugin/: plugin.json
cloudflare-toolkit/agents/: cloudflare-expert.md  mcp-architect.md  waf-security-engineer.md  worker-optimizer.md
cloudflare-toolkit/commands/: cost-check.md  deploy.md  explain.md  new-worker.md  setup-waf.md  tail.md
cloudflare-toolkit/hooks/: hooks.json
cloudflare-toolkit/scripts/: calculate-costs.js  check-worker-security.js  validate-wrangler-toml.js
docs/: ARCHITECTURE.md  CLEANUP_AUDIT.md  CROSSMINT_INTEGRATION_PLAN.md  CROSSMINT_NEOBANK_STRATEGIC_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PRD.md  SECURITY.md  SOLANA_PROGRAM_ARCHITECTURE.md
docs/audits/: 2026-02-04-comprehensive-audit.md
docs/investor/: AI_FORMATTING_PROMPT.md  EXECUTIVE_SUMMARY.md  INTERNAL_STRATEGIC_VISION.md  INVESTMENT_THESIS.md  MARKET_ANALYSIS.md  README.md  TECHNICAL_ARCHITECTURE.md  THE_PARADIGM_SHIFT.md
docs/simplifications/: 2026-02-04-full-codebase-simplification.md  (+1 more)
pitch-deck/: PITCH_DECK_REBUILD_PROMPT.md
programs/blockdrive/: Anchor.toml  Cargo.toml  DEPLOY.md
programs/blockdrive/scripts/: deploy-devnet.sh
programs/blockdrive/src/: errors.rs  events.rs  lib.rs  transfer_hook.rs
programs/blockdrive/src/client/: membership-client.ts
programs/blockdrive/src/instructions/: delegation.rs  file.rs  gas_credits.rs  membership.rs  mod.rs  session.rs  sharding.rs  vault.rs
programs/blockdrive/src/state/: delegation.rs  file_record.rs  gas_credits.rs  membership_link.rs  mod.rs  session_delegation.rs  user_vault.rs  user_vault_master.rs  user_vault_shard.rs  vault_index.rs
recovery-sdk/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
recovery-sdk/blockdrive/: __init__.py  crypto.py  recovery.py  solana.py  storage.py  wallet.py
recovery-sdk/blockdrive_recovery/: __init__.py  cli.py  crypto.py  recovery.py  solana.py  storage.py  types.py
recovery-sdk/examples/: basic_recovery.py  recover_all_files.py  recover_single_file.py  verify_onchain.py  web_integration.py
recovery-sdk/tests/: test_crypto.py  test_storage.py  test_wallet.py
scripts/: build-circuits.sh  check-balance.ts  circuits-package.json  package-lock.json  package.json  setup-devnet.ts  setup-stripe-products.js  test-circuits.js  trusted-setup-ceremony.md
src/: App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
supabase/: config.toml
(+690 files in other folders)
