[package]
name = "blockdrive"
version = "0.1.0"
description = "BlockDrive - Decentralized encrypted file storage on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockdrive"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
spl-pod = "0.2"
spl-type-length-value = "0.4"

[dev-dependencies]
anchor-bankrun = "0.5.0"
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.0", features = ["full"] }
